# Empyria

./: CMakeLists.txt  LICENSE  main.cpp
Empyria/Models/terrain/: Mt Evans Colorado.mtl  Mt Evans Colorado_ID121_diffuse.tga  Mt Evans Colorado_ID121_normal_map.tga  Mt Evans Colorado_ID186_diffuse.tga  Mt Evans Colorado_ID186_normal_map.tga  Mt Evans Colorado_ID212_diffuse.tga  Mt Evans Colorado_ID212_normal_map.tga  Mt Evans Colorado_ID238_diffuse.tga  Mt Evans Colorado_ID238_normal_map.tga  Mt Evans Colorado_ID264_diffuse.tga  Mt Evans Colorado_ID264_normal_map.tga  Mt Evans Colorado_ID264_roughness.tga  Mt Evans Colorado_ID303_diffuse.tga  Mt Evans Colorado_ID303_normal_map.tga  Mt Evans Colorado_ID329_diffuse.tga  Mt Evans Colorado_ID329_normal_map.tga  Mt Evans Colorado_ID355_diffuse.tga  Mt Evans Colorado_ID355_emissive.tga  Mt Evans Colorado_ID355_normal_map.tga  Mt Evans Colorado_ID381_diffuse.tga  Mt Evans Colorado_ID381_normal_map.tga  Mt Evans Colorado_ID43_diffuse.tga  Mt Evans Colorado_ID43_normal_map.tga  Mt Evans Colorado_ID446_diffuse.tga  Mt Evans Colorado_ID446_normal_map.tga  Mt Evans Colorado_ID446_reflection.tga  Mt Evans Colorado_ID485_diffuse.tga  Mt Evans Colorado_ID485_normal_map.tga  Mt Evans Colorado_ID485_roughness.tga  Mt Evans Colorado_ID667_diffuse.tga  Mt Evans Colorado_ID667_normal_map.tga
Empyria/Scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h
Empyria/Scripts/: Block.cpp  Block.h  ChatManager.cpp  ChatManager.h  ChatView.cpp  ChatView.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Player.cpp  Player.h  PlayerListView.cpp  PlayerListView.h  VoxelRaycaster.cpp  VoxelRaycaster.h
Engine/: Camera.cpp  Camera.h  CanvasScaler.cpp  CanvasScaler.h  Component.h  EmpyriaEngine.h  EngineStarter.hpp  GameObject.cpp  GameObject.h  InputHandler.cpp  InputHandler.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ModelObject.cpp  ModelObject.h  RectTransform.cpp  RectTransform.h  Scene.cpp  Scene.h  SceneManager.h  Transform.cpp  Transform.h  UIElement.cpp  UIElement.h  UIObject.cpp  UIObject.h  UIRenderer.cpp  UIRenderer.h  Window.cpp  Window.h  loadShader.hpp  tiny_obj_loader.h
Engine/GameObject/: GameObject.cpp  GameObject.h  ModelObject.cpp  ModelObject.h  PrimitiveType.h  Transform.cpp  Transform.h
Engine/Input/: InputHandler.cpp  InputHandler.h
Engine/Mesh/: Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h
Engine/Networking/: UdpClient.cpp  UdpClient.h
Engine/Physics/: Rigidbody.cpp  Rigidbody.h
Engine/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Shaders/: DefaultShader.fragmentshader  DefaultUIShader.fragmentshader  DefaultUIShader.vertexshader  Shaders.h
Engine/Text/: TextObject.cpp  TextObject.h  TextRenderer.cpp  TextRenderer.h
Engine/UI/: InputField.cpp  InputField.h  ListView.cpp  ListView.h  RectTransform.cpp  RectTransform.h  UIObject.cpp  UIObject.h  UIRenderer.cpp  UIRenderer.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
